# HSE-Stuff

./: CMakeLists.txt
deadlines/: pmi.yml
tasks/admission/: admission.cpp
tasks/chocolate/: chocolate.cpp
tasks/fibonacci/: fibonacci.cpp
tasks/image_processor/: CMakeLists.txt  base_filter.cpp  base_filter.h  bmp_editor.cpp  bmp_editor.h  filter_blur.cpp  filter_blur.h  filter_crop.cpp  filter_crop.h  filter_edge.cpp  filter_edge.h  filter_grayscale.cpp  filter_grayscale.h  filter_negative.cpp  filter_negative.h  filter_production.h  filter_rainbow.cpp  filter_rainbow.h  filter_setting.cpp  filter_setting.h  filter_sharp.cpp  filter_sharp.h  image.cpp  image.h  image_processor.cpp  parser.cpp  parser.h  pipeline.cpp  pipeline.h  rgb.cpp  rgb.h  rgbmatrix.cpp  rgbmatrix.h
tasks/is_leap/: is_leap.cpp
tasks/multiplication/: multiplication.cpp
tasks/next_even/: next_even.cpp
tasks/palindrome/: palindrome.cpp
tasks/password/: password.cpp
tasks/provinces/: provinces.cpp
tasks/queue/: queue.cpp
tasks/reduce_fraction/: reduce_fraction.cpp
tasks/scorer/: scorer.cpp
tasks/sort_students/: sort_students.cpp
tasks/stack/: stack.cpp
tasks/tests_checking/: tests_checking.cpp
tasks/unixpath/: unixpath.cpp
